bug fixing/zebos-xp-2.2-errors/error1.txt

zebos/nsm/smi/nsm_qos_wrapper.c
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#include "pal.h"
#include "lib.h"
<<<<<<< HEAD
#include "nsmd.h"

=======
>>>>>>> origin/master
#ifdef HAVE_SNMP
#include <asn1.h>
#include "snmp.h"
#endif /* HAVE_SNMP */



-I../lib/smi/client -I../lib/smi/client/api -I../lib/smi/client/smi_auto_bgp -I../lib/smi/client/smi_auto_ntp -I../lib/smi/client/smi_auto_imi -I../lib/smi/client/smi_auto_pcep -I../lib/smi/client/smi_auto_pim4 -I../lib/smi/client/smi_auto_mrib6 -I../lib/smi/client/smi_auto_pim -I../lib/smi/client/smi_auto_mld -I../lib/smi/client/smi_auto_igmp -I../lib/smi/client/smi_auto_vlan -I../lib/smi/client/smi_auto_pbb -I../lib/smi/client/smi_auto_igmpsnooping -I../lib/smi/client/smi_auto_routemap -I../lib/smi/client/smi_auto_pim6 -I../lib/smi/client/smi_auto_vrf -I../lib/smi/client/smi_auto_rib -I../lib/smi/client/smi_auto_oamlps -I../lib/smi/client/smi_auto_rsvp -I../lib/smi/client/smi_auto_mrib4 -I../lib/smi/client/smi_auto_ldp -I../lib/smi/client/smi_auto_pbrport -I../lib/smi/client/smi_auto_oambfd -I../lib/smi/client/smi_auto_vpls -I../lib/smi/client/smi_auto_lmp -I../lib/smi/client/smi_auto_vrrp -I../lib/smi/client/smi_auto_bridge -I../lib/smi/client/smi_auto_mplsexp -I../lib/smi/client/smi_auto_acl -I../lib/smi/client/smi_auto_vr -I../lib/smi/client/smi_auto_isis -I../lib/smi/client/smi_auto_sr -I../lib/smi/client/smi_auto_oamrps -I../lib/smi/client/smi_auto_plist -I../lib/smi/client/smi_auto_keychain -I../lib/smi/client/smi_auto_qos -I../lib/smi/client/smi_auto_switchportinterface -I../lib/smi/client/smi_auto_mldsnooping -I../lib/smi/client/smi_auto_dhcpc -I../lib/smi/client/smi_auto_ospf -I../lib/smi/client/smi_auto_oammplstp -I../lib/smi/client/smi_auto_ospfv3 -I../lib/smi/client/smi_auto_mstp -I../lib/smi/client/smi_auto_interface -I../lib/smi/client/smi_auto_mplsbfd -I../lib/smi/client/smi_auto_mplsinterface -I../lib/smi/client/smi_auto_mpls -I../lib/smi/client/smi_auto_gmpls -I../lib/smi/smi -I../lib/oam -I../lib/oam/lps -o ../platform/linux/obj/lib/smi//acl_get_api.o smi//acl_get_api.c
smi//acl_get_api.c: In function 'acl_get_acl_aclName_api_runtime_attrs':
smi//acl_get_api.c:78:12: error: 'ACL_ACLRULECOUNT' undeclared (first use in this function)
       case ACL_ACLRULECOUNT:
            ^
smi//acl_get_api.c:78:12: note: each undeclared identifier is reported only once for each function it appears in
smi//acl_get_api.c: In function 'acl_get_acl_aclNameIpv6_api_runtime_attrs':
smi//acl_get_api.c:118:12: error: 'ACL_ACLRULECOUNT' undeclared (first use in this function)
       case ACL_ACLRULECOUNT:
            ^
smi//acl_get_api.c: In function 'acl_get_acl_aclExtended_api_runtime_attrs':
smi//acl_get_api.c:160:12: error: 'ACL_ACLRULECOUNT' undeclared (first use in this function)
       case ACL_ACLRULECOUNT:
            ^
smi//acl_get_api.c: In function 'acl_get_acl_aclStandard_api_runtime_attrs':
smi//acl_get_api.c:202:12: error: 'ACL_ACLRULECOUNT' undeclared (first use in this function)
       case ACL_ACLRULECOUNT:
            ^
make[3]: *** [../platform/linux/obj/lib/smi//acl_get_api.o] Error 1
make[2]: *** [../../platform/linux/obj/lib.a] Error 2
make[1]: *** [ribd] Error 2
/localdata/project/ipi-daemons-integration/packages-saos-sds/zebos/zebos:

Fail: ./cgo TARG=saos-sds zebos V=1

bash-4.2$



bash-4.2$ git diff HEAD^ HEAD ./zebos/platform/linux/cml/infomodel/mo_acl.xml
diff --git a/zebos/platform/linux/cml/infomodel/mo_acl.xml b/zebos/platform/linux/cml/infomodel/mo_acl.xml
index de48bb2..7e4e61a 100644
--- a/zebos/platform/linux/cml/infomodel/mo_acl.xml
+++ b/zebos/platform/linux/cml/infomodel/mo_acl.xml
@@ -6,9 +6,11 @@
     <!-- PM_ACCESS = PM_NSM, PM_UCAST, PM_LDP, PM_MCAST,PM_HOSTP
         Missing modules HOSTPD,RIPNG,NDD,DVMRP -->
     <smi-server-modules>ISIS,OSPF,INTERFACE,OSPFV3,RIP,BGP,PIM,IMI,LDP,MRIB4</smi-server-modules>
+    <smi-show-modules>INTERFACE</smi-show-modules>
     <belongs-to>ZebOS</belongs-to>
     <import>cml_data_types</import>
     <revisions>
+      <revision date="2017-11-09" num="3" desc="Added acl get api changes"/>
       <revision date="2017-07-20" num="2" desc="Added custom-db-triiger for resequence"/>
       <revision date="2017-03-06" num="1" desc="Initial version of datamodel"/>
     </revisions>
@@ -25,6 +27,7 @@
           <prependstr>access-list</prependstr>
         </cli>
       </attr>
+      <uses grouping="aclRuntimeattrs"/>
       <objectlist name="sequence">
         <implicit_delete>sequence</implicit_delete>
         <cli>
@@ -95,6 +98,7 @@
           <prependstr>access-list</prependstr>
         </cli>
       </attr>
+      <uses grouping="aclRuntimeattrs"/>
       <objectlist name="sequence">
         <implicit_delete>sequence</implicit_delete>
         <implicit_delete>aclNameIpv6</implicit_delete>
@@ -354,6 +358,7 @@ This command has these main parts:
           <prependstr>access-list</prependstr>
         </cli>
       </attr>
+      <uses grouping="aclRuntimeattrs"/>
       <objectlist name="sequence">
         <implicit_delete>sequence</implicit_delete>
         <implicit_delete>aclExtended</implicit_delete>
@@ -763,6 +768,7 @@ There is an implied deny specification for traffic that is not permitted. A sing
           <cliFlag>drop-attr-name</cliFlag>
         </cli>
       </attr>
+      <uses grouping="aclRuntimeattrs"/>
       <objectlist name="sequence">
         <implicit_delete>aclStandard</implicit_delete>
         <attr>
@@ -1126,6 +1132,13 @@ There is an implied deny specification for traffic that is not permitted. A sing
       <uses grouping="ip_zebos_ipv6_zebos"/>
       <uses grouping="accessListAttr"/>
     </objectlist>
+    <grouping name="aclRuntimeattrs">
+      <attr>
+        <name>aclRuleCount</name>
+        <type>CML_UINT16_T</type>
+        <category>CML_RUNTIME</category>
+      </attr>
+    </grouping>
     <grouping name="ip_zebos_ipv6_zebos">
       <attr>
         <name>Zeboslabel</name>
@@ -1517,7 +1530,7 @@ There is an implied deny specification for traffic that is not permitted. A sing
         </cli>
       </attr>
     </grouping>
-    <protocol-api-header-file>aclfilter_smi_wrap.h</protocol-api-header-file>
+    <protocol-api-header-file>aclfilter_smi_wrap.h,acl_get_api.h</protocol-api-header-file>
     <operation name="objectDelete">
       <southInterface name="access_list_unset_by_name_wrap">
         <params>
bash-4.2$


bash-4.2$ git status
On branch ciena/oneos/zebos-xp-2.1
Your branch is ahead of 'origin/ciena/oneos/zebos-xp-2.1' by 1 commit.
  (use "git push" to publish your local commits)
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	deleted:    zebos/lib/smi/acl_get_api.c
	deleted:    zebos/lib/smi/acl_get_api.h

Untracked files:
  (use "git add <file>..." to include in what will be committed)

	zebos/platform/linux/cml/infomodel/.mo_acl.xml.swp

bash-4.2$
bash-4.2$
bash-4.2$
